bibliography in the table of contents and [ActiveEdge] updated pictures

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -228,6 +228,7 @@
 \input{include/ThinSensors}
 \input{include/ActiveEdgeSensors}
 \input{include/Conclusions}
+%\input{bibliography/refs.bib}
 % Uncomment the following command to get references per chapter.
 % Put it inside the file or change \include to \input if you do not want the references
 % on a separate page
@@ -237,7 +238,7 @@
 % Use biblatex for the bibliography
 % Add bibliography to Table of Contents
 % Comment out this command if your references are printed for each chapter.
-%\printbibliography[heading=bibintoc]
+\printbibliography[heading=bibintoc]
 
 %------------------------------------------------------------------------------
 % Include the following lines and comment out \printbibliography if
@@ -258,7 +259,7 @@
 \include{include/appendix_Calibration}
 \include{include/appendix_Telescope}
 \include{include/appendix_ThinSensors}
-\printbibliography[heading=subbibliography]
+%\printbibliography[heading=subbibliography]
 
 %------------------------------------------------------------------------------
 % Declare lists of figures and tables and acknowledgements as backmatter
