--- a/include/ActiveEdgeSensors.tex
+++ b/include/ActiveEdgeSensors.tex
@@ -17,7 +17,7 @@ without overlaps and with a high coverage.
 In this chapter, the fabrication process for active edge sensors is
 described. Planar sensors produced by Advacam~\cite{AdvacamRef} and
 bump bonded to Timepix3 ASICs are tested in test beams. The signal
-collection and the efficiency on the edge is presented. The test beam
+collection and the efficiency on the edge are presented. The test beam
 results are compared to TCAD simulations.
 
 %% --------------------------------------------- %%
@@ -152,49 +152,49 @@ described as follows~\cite{AdvacamProcessFlow}.
   \centering
   \begin{subfigure}[b]{0.3\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_1}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_1.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_2}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_2.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_3}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_3.pdf}
     \caption{}
   \end{subfigure}\\
 
   \begin{subfigure}[b]{0.3\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_4}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_4.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_5}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_5.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_6}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_6.pdf}
     \caption{}
   \end{subfigure} \\
 
   \begin{subfigure}[b]{0.3\textwidth}
     \centering
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_7}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_7.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_8}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_8.pdf}
     \caption{}
   \end{subfigure}\hfill
   \begin{subfigure}[b]{0.3\textwidth}
-    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_9}
+    \includegraphics[width=\textwidth]{figures/ActiveEdge/advacamProcess/wafer_9.pdf}
     \caption{}
   \end{subfigure}
 
   \caption{Schematic illustration of the process flow for the
     fabrication of active edge sensors by
-    Advacam~\cite{AdvacamProcessFlow}.}
+    Advacam~\cite{AdvacamRef}.}
   \label{fig:AdvacamProcessFlow}
 \end{figure}
 
