[ActiveEdge] conclusions written based on the discussion with Anna

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -34,6 +34,7 @@
 \usepackage{thesis_defs}
 \usepackage{CLICdp_definitions} % nalipour
 %\usepackage{wrapfig} % nalipour
+\usepackage{enumitem}%nalipour
 \usepackage{upgreek}
 
 % nalipour packages
@@ -199,7 +200,7 @@
 %------------------------------------------------------------------------------
 % You can add your acknowledgements here - don't forget to also add
 % them to \includeonly above
-\include{thesis_acknowledge}
+%\include{thesis_acknowledge}
 
 \tableofcontents
 
@@ -276,7 +277,7 @@
 %------------------------------------------------------------------------------
 % You could instead add your acknowledgements here - don't forget to
 % also add them to \includeonly above
-% \include{thesis_acknowledge}
+\include{thesis_acknowledge}
 
 %------------------------------------------------------------------------------
 % CV needed when you submit your PhD thesis
