--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -1,5 +1,5 @@
 %------------------------------------------------------------------------------
-\chapter*{Acknowledgements}
+\chapter{Acknowledgements}
 \label{sec:ack}
 %------------------------------------------------------------------------------
 
