--- a/include/Conclusions.tex
+++ b/include/Conclusions.tex
@@ -3,6 +3,7 @@
 \label{ch:conclusions}
 % ==============================================================================    
 
+
 The vertex detector plays a key role to fully exploit the physics
 potential at CLIC. To meet the challenging demands on the precision
 physics, pixel detectors with high spatial and timing resolutions with
@@ -13,6 +14,12 @@ CLIC is given. Prototypes are designed to characterise thin and
 active-edge sensors. During this thesis, we span a large set of
 activities for this characterisation in test-beam, laboratory
 measurements and simulations. A summary is given in the following.
+
+\cref{ch:CLIC} gives an overview on the CLIC experiment. The
+accelerator is briefly described and the physics potential of the
+experiment is given. The requirements on the CLIC detector are
+presented with a focus of the vertex detector which is the main
+subject of the work presented.
 
 \cref{sec:SiliconTheory} gives an introduction to semiconductor
 material with an accent on silicon which is predominant in tracking
@@ -28,11 +35,11 @@ resolution are investigated.
 
 The Timepix3 pixel readout ASIC is used in the CLICdp Timepix3
 telescope as well as for the study of thin and active-edge
-sensors. \cref{ch:FE_electronics} introduces this hybrid pixel readout
-ASICs. The calibration methods to convert the threshold DAC and the
-TOT into energy is explained. The calibration is applied to the
-test-beam data and the energy spectrum in data agrees well with
-simulations and the calibration is therefore validated.
+sensors. \cref{ch:FE_electronics} introduces this pixel readout
+ASIC. The calibration methods to convert the threshold DAC and the TOT
+into energy is explained. The calibration is applied to the test-beam
+data and the energy spectrum in data agrees well with simulations and
+the calibration is therefore validated.
 
 The reconstruction software frameworks used for the analysis of data
 and simulations are described in \cref{ch:Software}. The AllPix
@@ -48,48 +55,83 @@ extracted in simulations. This is in agreement with the expectations.
 Test-beam measurements and Allpix simulations for $50-150\,\micron$
 thin planar sensors are described in \cref{ch:ThinSensorsStudies}. The
 studies are done with a pixel pitch of $55\,\micron$. The simulations
-are in good agreement with data therefore they are used to predict the
-resolution with smaller pixels of $25\,\micron$ pitch where data is
-still not available. This small pitch and $50\,\micron$ thick sensor
-is intended to be used for the CLIC vertex detector where a hit
-resolution of $\sim3\,\micron$ is wished to be achieved. The
+are in good agreement with data. For the CLIC vertex detector a hit
+resolution of $\sim3\,\micron$ is wished to be achieved with pixel
+detectors of $25\,\micron$ pitch and a thickness of
+$50\,\micron$. Since data is still not available for such pixel
+detectors, the simulations are extrapolated for such small pixels. The
 simulations show that achieving this resolution with $25\,\micron$
 pixels is not possible.
 
 \cref{ch:ActiveEdgeSensors} investigates the efficiency of active-edge
 sensors. Different edge widths and guard-ring configurations are
-investigated. A TCAD simulation of the edge is as well implemented. In
-simulations, as expected, the floating guard-ring shows a higher
-breakdown voltage and a small loss of energy deposition in the guard
-ring and therefore a high efficiency up to the trench of the sensor.
+investigated. A TCAD simulation of the edge is as well implemented
+which allows for better understanding of the operation of such
+devices. In simulations, as expected, the floating guard-ring seems to
+be the best solution as it shows a higher breakdown voltage and a
+small loss of energy deposition in the guard ring and therefore a high
+efficiency up to the trench of the sensor. Test-beam data are in
+general in good agreement with simulations. However few discrepancies
+in terms of breakdown behaviour and the charge collected at the edge
+between simulations and data are observed. During the test-beam, we
+only had one assembly per configuration at our disposal. More
+assemblies are needed to be tested in order to draw final conclusions
+on their operation.
 
-\begin{itemize}
-\item Thin planar sensors reaching their limits: other solutions such
-  as HV-CMOS can be also attractive.
-\item Design of readout ASIC important in terms of noise. Operating at
-  lower threshold can help.
-\item Miniaturisation and the limits
-\item Input for realistic digitiser for the CLIC full simulation. 
-\item Active-edge assemblies: floating guard ring is the best solution
-  (breakdown and detection efficiency) for thin sensors. We see an
-  early breakdown and a large fraction of the deposited charge in the
-  guard ring. A readout more adapted for this option is needed to
-  fully confirm the expectations. Ladders of detectors should be built
-  to fully confirm the assumptions.
-\end{itemize}
+Miniaturisation of pixels is necessary for achieving a high spatial
+resolution of $3\,\micron$ as required by the CLIC vertex
+detector. But combined with thin planar sensors of $50\,\micron$, does
+not provide enough information through charge sharing in order to
+reach the required resolution. Also, downscaling in a hybrid pixel
+detectors makes complications for bump-bonding of sensors to the
+readout ASICs. Other sensors solutions with High-Voltage (HV) CMOS
+process are considered for CLIC which can be glued to the readout
+ASICs (instead of bump-bonding) and also provides information through
+charge sharing.
+
+Up to now, the full detector simulations for CLIC were done with a
+$3\,\micron$ hit resolution for the vertex detector. The extrapolation
+done in this thesis for $25\,\micron$ pitch and $50\,\micron$ planar
+sensors can be implemented in full simulations. The effect of a worse
+resolution on flavour-tagging can be studied and this might change the
+requirements on the CLIC vertex detector.
+
+The two-dimensional TCAD simulation of active-edge sensors gives
+promising results and fulfills the expectations. The floating guard
+ring appears to be the most suitable solution, as it shows a high
+detection efficiency at the edge and an acceptable breakdown
+behaviour. A three-dimensional simulation can provide more precision
+on the capacitive coupling between the guard ring and the pixels. In
+data, new assemblies are needed to be tested in order to chose the
+best option of guard ring for thin sensors.
+
+% \begin{itemize}
+% \item Thin planar sensors reaching their limits: other solutions such
+%   as HV-CMOS can be also attractive.
+% \item Design of readout ASIC important in terms of noise. Operating at
+%   lower threshold can help.
+% \item Miniaturisation and the limits
+% \item Input for realistic digitiser for the CLIC full simulation. 
+% \item Active-edge assemblies: floating guard ring is the best solution
+%   (breakdown and detection efficiency) for thin sensors. We see an
+%   early breakdown and a large fraction of the deposited charge in the
+%   guard ring. A readout more adapted for this option is needed to
+%   fully confirm the expectations. Ladders of detectors should be built
+%   to fully confirm the assumptions.
+% \end{itemize}
 
 
-Laboratory and test-beam measurements on prototypes
-with thin sensors are presented. \textsc{Geant4}-based and TCAD
-simulations are performed and validated with a comparison to the
-collected data. In this thesis, we span a large set of activities
-starting from calibration of assemblies, to resolution studies of the
-telescope used to finally characterise thin sensors and different
-options of active-edge technology and their impact on the particle
-detection. A summary of these activities is given here below.
+% Laboratory and test-beam measurements on prototypes
+% with thin sensors are presented. \textsc{Geant4}-based and TCAD
+% simulations are performed and validated with a comparison to the
+% collected data. In this thesis, we span a large set of activities
+% starting from calibration of assemblies, to resolution studies of the
+% telescope used to finally characterise thin sensors and different
+% options of active-edge technology and their impact on the particle
+% detection. A summary of these activities is given here below.
 
-This thesis, gives an overview on the CLIC experiment. The accelerator
-is briefly described and the physics potential of the experiment is
-given. The requirements on the CLIC detector are presented with a
-focus of the vertex detector which is the main subject of the work
-presented.
+% This thesis, gives an overview on the CLIC experiment. The accelerator
+% is briefly described and the physics potential of the experiment is
+% given. The requirements on the CLIC detector are presented with a
+% focus of the vertex detector which is the main subject of the work
+% presented.
