Few style updates

--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -1,4 +1,4 @@
-\documentclass[Master,UKenglish]{scrbook}
+\documentclass[Master,UKenglish,Final]{scrbook}
 %------------------------------------------------------------------------------
 % This file contains a skeleton thesis for
 % a Physics or Astronomy Institute in the University of Bonn
@@ -53,7 +53,7 @@
 %------------------------------------------------------------------------------
 % When writing your thesis it is often helpful to have the date and
 % time in the output file. Comment this out for the final version.
-\ifoot[\today{} \thistime]{\today{} \thistime}
+%\ifoot[\today{} \thistime]{\today{} \thistime}
 
 % In order to check if your labels are referenced try the refcheck package
 % \usepackage{refcheck}
@@ -130,6 +130,8 @@
   include/appendix_ThinSensors,  
   refs,
   thesis_acknowledge,
+  abstract, 
+  resume,
 }
 
 %------------------------------------------------------------------------------
@@ -201,6 +203,9 @@
 % You can add your acknowledgements here - don't forget to also add
 % them to \includeonly above
 %\include{thesis_acknowledge}
+\include{abstract}
+\include{resume}
+
 
 \tableofcontents
 
