--- a/PhD_Submit_Title.tex
+++ b/PhD_Submit_Title.tex
@@ -17,8 +17,13 @@
 %	TITLE SECTION
 %----------------------------------------------------------------------------------------
 \vspace{2cm}
+
 %% \HRule \\[0.4cm]
-{ \huge \bfseries \thesistitle}\\[0.4cm] % Title of your document
+{ \huge \bfseries Test-beam measurements and simulation studies
+  of}\\%[0.4cm] % Title of your document
+%% \HRule \\[1.5cm]
+\vspace{0.2cm} { \huge \bfseries thin pixel sensors for the CLIC vertex
+  detector}\\[0.4cm] % Title of your document
 %% \HRule \\[1.5cm]
 \vspace{2cm}
 %----------------------------------------------------------------------------------------
@@ -36,8 +41,8 @@
 {\Large born on 11.08.1989} \\
 {\Large \thesistown}\\ \vspace{2cm}
 {\large accepted on the recommendation of} \\ \vspace{0.5cm}
-{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\
-{\Large \textbf{Prof. Dr. Rainer Wallny}} \\
+{\Large \textbf{Prof. Dr. G\"{u}nther Dissertori}} \\ \vspace{0.2cm}
+{\Large \textbf{Prof. Dr. Rainer Wallny}} \\ \vspace{0.2cm}
 {\Large \textbf{Dr. Dominik Dannheim}} \\ \vspace{1cm}
 
 %% \begin{minipage}{0.4\textwidth}
