--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -132,6 +132,7 @@
   thesis_acknowledge,
   abstract, 
   resume,
+  dedicace,
 }
 
 %------------------------------------------------------------------------------
@@ -205,7 +206,7 @@
 %\include{thesis_acknowledge}
 \include{abstract}
 \include{resume}
-
+\include{dedicace}
 
 \tableofcontents
 
