--- a/thesis_acknowledge.tex
+++ b/thesis_acknowledge.tex
@@ -3,11 +3,68 @@
 \label{sec:ack}
 %------------------------------------------------------------------------------
 
-I would like to thank ...
+The achievement of this thesis is thanks to the help and contribution
+of many people involved and I do my best to credit every single one of
+them.
 
-You should probably use \texttt{\textbackslash chapter*} for
-acknowledgements at the beginning of a thesis and
-\texttt{\textbackslash chapter} for the end.
+First of all, I am obliged to pay my tribute to my professor, Günther
+Dissertori, for according me the great opportunity as a PhD student in
+physics at the ETH Zürich even though I came from an engineering
+background. The discussions, the support and guidance at any time
+despite his very busy schedule is very appreciated.
+
+I acknowledge with thanks Dominik Dannheim, as my supervisor at CERN,
+for following my work during three years with high-precision and a lot
+of patience and showing me your excellence in guiding of the research
+project on the vertex detector R\&D.
+
+All my gratitude also goes to Lucie Linssen, as the group leader of
+the EP-LCD group, who gave me various opportunities to work at her
+dynamic and creative group at CERN and for convincing all the
+above-mentioned supervisors to accept me as a PhD student.
+
+I would like to thank the EP-LCD group in general for their
+contribution to my work and also all the lunches, coffee breaks and
+social activities shared. More particularly, I express my gratitude
+to:
+
+\begin{itemize}
+\item Andreas Nurnberg, who always was present for guiding me,
+  answering my questions, discussing my results and all his help
+  without which the carrying of this project would have not been
+  possible.
+\item Daniel Hynds and Adrian Fiergolski for the various discussions
+  and test-beams we have shared.
+\item Mathieu Benoît for introducing me to the pixel world through
+  test-beams, TCAD simulations and AllPix simulations.
+\item Rosa Simoniello, for sharing the office and all the discussions,
+  work-related or personal and the laughs we have shared.
+\end{itemize}
+
+I would like to thank my friends with whom I have shared so many
+memorable moments and I could count on them for any kind of support
+even though lately I was not really present due to the work load. My
+friends from Lausanne that I met during my studies at EPFL and we
+shared many years on the university benches and now we share so many
+great dinners, brunches: Charlotte, Chloé, Christophe, Coralie, Lara,
+Mina, Salim and Sebastien. And to my friends I have met at CERN:
+Elena, Enrico, Luca, Milena, Myriam for the shared lunches,
+discussions or nights out.
+
+Finally, I would like to thank my amazing family: my parents,
+Mahmanzar and Behzad, for their unconditional love and support
+throughout all my life, for all their sacrifices without which I could
+not imagine where I would be now. My beloved sister and housemate,
+Yassaman, for always being present, encouraging me and tolerating me
+during the times I was low (basically the whole year of 2016). My
+little smart brother, Alireza, for being who he is and always making
+me laugh with his funny stories.
+
+% I would like to thank ...
+
+% You should probably use \texttt{\textbackslash chapter*} for
+% acknowledgements at the beginning of a thesis and
+% \texttt{\textbackslash chapter} for the end.
 
 %%% Local Variables: 
 %%% mode: latex
