[ActiveEdge] update of the plots and finishing of the Abstract

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,4 +1,53 @@
-% ============================================================================== 
+% ============================================================================
 \chapter*{Abstract}
-% ============================================================================== 
-abstrack 
+% ============================================================================
+
+The Compact Linear Collider (CLIC), as a multi-\tev linear e$^+$e$^-$
+collider, is considered as one of the options to complement the LHC
+experiments at CERN. In the post-LHC era, CLIC will allow for
+exploring a great number of searches for new physics and provides
+sensitivity for precision physics measurements. The physics goals and
+experimental conditions at CLIC, set high precision requirements on
+innermost detector: the vertex detector. The principal challenges for
+this detector are listed as follows: high pointing resolution of
+$3\,\micron$, very low mass of $0.2\%$~X\textsubscript{0} per layer,
+10~ns time stamping capabilities of the readout chips, low power
+dissipation and compatibility with air-flow cooling and finally power
+pulsing operation.
+
+In this thesis, we characterise thin planar sensors with active-edge
+technology through calibration, test-beam measurements and
+simulations. Hybrid assemblies containing $50-150\,\micron$ thin
+planar silicon sensors are bump-bonded to Timepix3 readout ASICs. The
+assemblies are integrated within the Timepix3 beam telescope and
+characterised during test beams at the CERN SPS. A
+\textsc{Geant4}-based simulation framework, AllPix, has been set up in
+order to understand the charge deposition spectrum in such thin
+sensors and the charge sharing between neighbouring pixels. Data are
+as well used to validate the AllPix simulations. The latter offers the
+flexibility to integrate any geometry of pixel detectors and simulate
+the whole experimental setup such as a test-beam. Therefore, it is
+used to calculate the tracking resolution of the Timepix3 beam
+telescope. It is also employed to predict the resolution that can be
+achieved for a pixel detector of $25\,\micron$ pitch bump-bonded to a
+thin sensor of $50\,\micron$ aimed for CLIC, where data is still
+unavailable.
+
+
+For CLIC, a high coverage of the vertex detector is required while
+keeping the material budget as low as possible. This prevents overlaps
+between pixel detectors while tiling them into ladders. Also, the
+detectors must be able to detect up to their physical edges. The
+active-edge technology allows for growing the depletion volume up to
+the physical edges of silicon sensors and minimise the inactive
+regions. The thin-sensor prototypes tested in test-beam also contain
+active edges with different configurations. The efficiency of
+detection at the edge is characterised in test-beams. Technology
+Computer-Aided Design (TCAD) simulations are also implemented to
+simulate the fabrication of such devices and their
+operation. Simulations are compared to the data for different
+configurations.
+
+Finally, conclusions are given based on the collected data and the
+different types of simulations performed for thin and active-edge
+planar sensors.
