--- a/PhDThesis.tex
+++ b/PhDThesis.tex
@@ -206,7 +206,7 @@
 %\include{thesis_acknowledge}
 \include{abstract}
 \include{resume}
-\include{dedicace}
+%\include{dedicace}
 
 \tableofcontents
 
