--- a/include/Introduction.tex
+++ b/include/Introduction.tex
@@ -3,48 +3,63 @@
 \label{sec:intro}
 % ==============================================================================             
 
-
 The Compact Linear Collider (CLIC) concept~\cite{Aicheler:1500095} for
 a future linear e\textsuperscript{+}e\textsuperscript{-} collider is
-under development by the international CLIC collaboration and has the
-potential to complement the measurements done by the LHC
-experiments. With proposed centre-of-mass energies of $380\,\gev$,
+under development by the international CLIC collaboration. Its physics
+programme has the potential to complement the measurements done by the
+LHC experiments. With proposed centre-of-mass energies of $380\,\gev$,
 $1.5\,\tev$ and $3\,\tev$ and with an instantaneous luminosity up to
-$6\times10^{34}\,\inversecmsquaredsec$, it allows for high precision
-measurements of Standard Model physics and of new physics potentially
-discovered at the $13\,\tev$ LHC as well as searches for Beyond
-Standard Model (BSM) physics.
+$6\times10^{34}\,\inversecmsquaredsec$, this lepton collider allows
+for high precision measurements of Standard Model physics and of new
+physics potentially discovered at the $13\,\tev$ LHC as well as
+searches for Beyond Standard Model (BSM) physics.
 
-A detector model is being developed for the CLIC experiment taking
+For the CLIC experiment, a detector is under development which takes
 into account the precision physics requirements and experimental
-conditions~\cite{Linssen:1425915}. These conditions set challenging
-demands for the vertex detector in terms of spatial resolution,
-material budget, timing resolution and efficient heat removal from
-sensors and readout. The CLIC vertex detector R\&D programme studies
-different sensor technologies and takes into account constraints from
-mechanics, power delivery and cooling. In order to reduce the multiple
-scatterings and achieve high precision on measurements, a low material
-budget of $\sim0.2\%$~X\textsubscript{0} per vertex detector layer is
-required including readout, support and cabling. The goal is to
-achieve a single-point resolution of $3\,\micron$ with $50\,\micron$
-thick sensors coupled to $50\,\micron$ thick readout ASICs with
+conditions~\cite{Linssen:1425915}. The CLIC detector, like most of the
+detectors in high-energy physics experiments, consists of several
+sub-detectors. The innermost sub-detector, which is the closest to the
+interaction point, is a silicon pixel detector with three double-sided
+layers in the barrel region and a spiral geometry in the endcap
+region. Its main goal is distinguishing heavy quarks from
+light-flavoured quarks through a precise measurement of their
+displaced decay vertex. The precision physics requirements set
+challenging demands for the vertex detector in terms of spatial
+resolution, material budget with efficient heat removal from sensors
+and readout and also, timing resolution. The CLIC vertex detector R\&D
+programme studies different detector technologies and takes into
+account constraints from mechanics, power delivery and cooling. In
+order to reduce the multiple scatterings and achieve high precision on
+measurements, a low total material budget of
+$\sim0.2\%$~X\textsubscript{0} per vertex detector layer is required
+including readout, support and cabling. The goal is to achieve a
+single-point resolution of $3\,\micron$ with $50\,\micron$ thick
+sensors coupled to $50\,\micron$ thick readout ASICs with
 $25\,\micron$ pixel pitch.
 
-In this thesis, the feasibility of thin sensors for operation for the
-CLIC vertex detector is studied with the
-Timepix3~\cite{Timepix3Poikela} readout chips with a pixel size of
-$55\,\micron$. Test beam data for different sensor thicknesses is
-compared to \textsc{Geant4}-based~\cite{Agostinelli:2002hh}
-simulations to validate the simulations. The simulation is
-extrapolated for smaller pixels of $25\,\micron$.
+In this thesis, the feasibility of thin pixelated planar silicon
+sensors for operation in the CLIC vertex detector is
+studied. Assemblies with $50\,\micron$ to $150\,\micron$ thick sensors
+are bump bonded to Timepix3 readout ASICs~\cite{Timepix3Poikela} with
+a pixel size of $55\,\micron$. Assemblies are tested during test-beam
+campaigns at the CERN SPS. Data is used for the charcterisation of the
+prototypes in terms of energy deposition, charge sharing and spatial
+resolution in such thin
+sensors. \textsc{Geant4}-based~\cite{Agostinelli:2002hh} simulations
+are used for a better understanding of thin sensors and validated with
+data. The simulation is then extrapolated for smaller pixels of
+$25\,\micron$ where data are not fully available. This gives a hint on
+the spatial resolution which can be achieved for the CLIC vertex
+detector.
 
 Active-edge sensors allow for seamless tiling of pixel sensors of a
 vertex detector by depleting the sensors up to their physical
 edges. This allows for high coverage without creating overlaps between
-the pixel sensors and therefore reduces the material. Measurements of
-prototypes and corresponding simulations are performed to compare the
-performance of different active-edge sensor layouts, resulting in a
-proposal for a suitable layout.
+the pixel sensors and therefore reduces the material content of the
+detector. Measurements of prototypes and corresponding finite-element
+TCAD simulations are performed to compare the performance of different
+active-edge sensor layouts, resulting in a proposal for a suitable
+layout.
 
 % Different guard
 % ring solutions for thin active-edge sensors are considered for the
@@ -62,22 +77,21 @@ the semiconductor detectors are presented in \cref{sec:SiliconTheory}.
 
 The Timepix3 readout ASIC is presented in
 \cref{ch:FE_electronics}. The tested assemblies are introduced and
-their readout noise is studied. The calibration methods for these
+their readout noise is measured. The calibration methods for these
 assemblies are discussed.
 
 The simulation and reconstruction software frameworks are described in
-\cref{ch:Software}. The simulations are later validated with
-data. The reconstruction frameworks are used for the analysis of both
-simulations and data.
+\cref{ch:Software}. The reconstruction frameworks are used for the
+analysis of simulations and data.
 
 The Timepix3 pixel beam-telescope used for testing the Timepix3
 assemblies is described in \cref{ch:Telescope}. Its performance is
 investigated in data and simulations.
 
-The feasibility and performance of thin sensors is studied in
-\cref{ch:ThinSensorsStudies}. Simulations are validated with test-beam
-data. The spatial resolution for a $25\,\micron$ pitch with a
-$50\,\micron$ thick pixel detector is extrapolated using the
+The feasibility of operating and the performance of thin sensors are
+studied in \cref{ch:ThinSensorsStudies}. Simulations are validated
+with test-beam data. The spatial resolution for a $25\,\micron$ pitch
+with a $50\,\micron$ thick pixel detector is extrapolated using the
 simulations.
 
 The performance of active-edge sensors is discussed in
